# Scalable_Quantum_PINN

./: .gitignore  AGENTS.md  AGP_CERTIFICATION_CRITERIA.md  LICENSE  METHODOLOGY.md  README.md  Rules.md  models.py  pauli_utilities.py  pyproject.toml  utils.py
Hamiltonians_to_use/: GENERATED_EXAMPLES.md  Hamiltonians_pauli.json  PROVENANCE.md  README.md  README_Quantum_PINN.md  h2_6-31g.pickle
docs/: CURRENT_Q15_BENCHMARK_METHODOLOGY.md  CURRENT_SPARSE_AGP_METHODOLOGY.md  README.md  SCALABLE_PINN_DESIGN.md
documentation/: LITERATURE_STATUS.md  MANUSCRIPT_LIMITATION.md  SCALABLE_PINN_DESIGN.md
examples/: two_qubit_sparse_demo.py
scripts/: README.md  agp_baseline_train.py  agp_evaluate_holdout.py  agp_holdout_feedback.py  agp_holdout_study.py  agp_mpo_backend.py  agp_physical_validation.py  agp_plot_annotations.py  agp_qubit_grid_benchmark.py  agp_regenerate_hcd_summaries.py  agp_residual_calibration.py  agp_residual_probes.py  agp_resource_policy.py  agp_restart.py  agp_size_intensive_study.py  agp_stratified_support.py  agp_support.py  agp_tn_router.py  build_driver_problem_hamiltonian.py  full_pauli_training_common.py  projected_sparse_training_common.py
tests/: README.md  full_pauli_training_common.py  projected_sparse_training_common.py  test_agp_benchmark_layout.py  test_agp_guarded_curriculum.py  test_agp_joint_calibration.py  test_agp_mpo_backend.py  test_agp_mps_validation.py  test_agp_physical_validation.py  test_agp_resample_checkpoint.py  test_agp_residual_calibration.py  test_agp_residual_probes.py  test_agp_resource_policy.py  test_agp_tn_router.py  (+10 more)
(+185 files in other folders)
